--- a/clash.yaml
+++ b/clash.yaml
@@ -121,6 +121,10 @@ proxy-groups:
       - DIRECT
       - 🔰 选择节点
 rules:
+ - DOMAIN-SUFFIX,wffra.com,⚓国外站点非日本IP
+ - DOMAIN-SUFFIX,newljlj.com,⚓国外站点非日本IP
+ - DOMAIN-KEYWORD,zptkk,🇨🇳 国内网站
+ - DOMAIN-KEYWORD,zipai,🇨🇳 国内网站
  - DOMAIN-SUFFIX,nrzj.vip,⚓国外站点非日本IP
  - DOMAIN-SUFFIX,youporn.com,⚓国外站点非日本IP
  - DOMAIN-SUFFIX,xv909.cc,⚓国外站点非日本IP
@@ -9802,4 +9806,3 @@ rules:
  - IP-CIDR,183.192.65.101/32,✈️国外站点
  - GEOIP,CN,🇨🇳 国内网站
  - MATCH,🔰 选择节点
-
