--- a/clash.yaml
+++ b/clash.yaml
@@ -110,6 +110,7 @@ proxy-groups:
       - DIRECT
       - 🔰 选择节点
 rules:
+ - DOMAIN-SUFFIX,ghfast.top,🇨🇳 国内网站
  - DOMAIN-KEYWORD,haolw,⚓国外站点非日本IP
  - DOMAIN-SUFFIX,jtyn120.buzz,⚓国外站点非日本IP
  - DOMAIN-SUFFIX,mymypic.net,✈️国外站点
