--- a/clash.yaml
+++ b/clash.yaml
@@ -109,6 +109,10 @@ proxy-groups:
       - DIRECT
       - 🔰 选择节点
 rules:
+ - DOMAIN-SUFFIX,shinv.link,✈️国外站点
+ - DOMAIN-SUFFIX,446m.com,✈️国外站点
+ - DOMAIN-SUFFIX,v2ph.com,⚓国外站点非日本IP
+ - DOMAIN-SUFFIX,fl310.com,✈️国外站点
  - DOMAIN-SUFFIX,meiziba.cc,✈️国外站点
  - DOMAIN-SUFFIX,animezilla.com,✈️国外站点
  - DOMAIN-SUFFIX,lspimg.com,✈️国外站点
