--- a/clash.yaml
+++ b/clash.yaml
@@ -109,6 +109,9 @@ proxy-groups:
       - DIRECT
       - 🔰 选择节点
 rules:
+ - DOMAIN-SUFFIX,情侣自拍图库.com,DIRECT
+ - DOMAIN-SUFFIX,hotlinkprotect.com,✈️国外站点
+ - DOMAIN-KEYWORD,zipaipic,DIRECT
  - DOMAIN-SUFFIX,shinv.link,✈️国外站点
  - DOMAIN-SUFFIX,446m.com,✈️国外站点
  - DOMAIN-SUFFIX,v2ph.com,⚓国外站点非日本IP
