--- a/clash.yaml
+++ b/clash.yaml
@@ -11,6 +11,9 @@ fallback: &fallback {type: fallback, url: http://1.1.1.1/generate_204, interval:
 load-balance: &load-balance {type: load-balance, strategy: consistent-hashing, url: http://1.1.1.1/generate_204, interval: 300, include-all: true}
 p: &p {type: http, interval: 86400, health-check: {enable: true, url: http://1.1.1.1/generate_204, interval: 1800, timeout: 5000}}
 proxy-providers:
+  yuanwangokk:
+    url: https://down.nigx.cn/raw.githubusercontent.com/yuanwangokk-1/subscribe/refs/heads/main/Clash%20Mate/%E6%B0%B8%E4%B9%85%E8%AE%A2%E9%98%85.yaml
+    <<: *p
   go4sharing:
     url: https://ghproxy.net/https://raw.githubusercontent.com/go4sharing/sub/main/sub.yaml
     <<: *p
